argocd/up-actual-webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  labels:
    app: express
spec:
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: ghcr.io/alex-j-butler/up-actual-webhook:fc3e028
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: helpers-configmap
          mountPath: /app/services
          subPath: helpers-config.js
      volumes:
      - name: helpers-configmap
        configMap:
          name: helpers-configmap
