argocd/up-actual-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upwebhook-svc
  labels:
    app: express
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: express
